--- a/css/style.css
+++ b/css/style.css
@@ -80,18 +80,15 @@ header{
 .prof{
     left: 5%;
 }
-.interest{
-   
-    text-align: center;
-     width: 120px;
-    height: auto;
-    
+
+.box{
+    height: 130px;
+    width: 130px;
+    border-radius: 65px;
+    overflow: hidden;
 }
-.interest .circle{
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    left: 10px;
+.box img{
+    width: 100%;
 }
 .list-info{
     font-weight: 600;
@@ -179,6 +176,9 @@ footer{
 }
 /* If the screen size is 600px or less, set the font-size of <div> to 30px */
 @media only screen and (max-width: 600px) {
+    .box{
+        margin-left: 25%;
+    }
     .header-collaps{
         background-color:rgb(241, 241, 241,0.5);
     }
