--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,11 @@ footer{
     .box{
         margin-left: 25%;
     }
+    .desc{
+         font-weight: 450;
+        font-size: 16px;
+        text-align: justify;
+    }
     .header-collaps{
         background-color:rgba(255, 255, 255, 0.8);
         padding:20px 0px;
